--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    border-radius: 20px;  
+    border-radius: 20px;
 }
 
 .add-note-button:hover {
@@ -33,7 +33,7 @@ body {
 
 .notes-list {
     display: grid;
-    gap: 10px;
+    gap: 15px;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-template-rows: masonry;
 }
@@ -41,6 +41,9 @@ body {
 .note-card {
     background-color: white;
     padding: 15px;
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    position: relative;
 }
 
 .note-title {
@@ -48,6 +51,19 @@ body {
     margin-bottom: 10px;
     padding: 5px;
     border: none;
+    background: none;
+}
+
+.note-title::placeholder {
+    color: black;
+}
+
+.note-content::placeholder {
+    color: black;
+}
+
+.note-tag-list::placeholder {
+    color: black;
 }
 
 .note-content {
@@ -57,6 +73,7 @@ body {
     font-size: 15px;
     padding: 5px;
     border: none;
+    background: none;
 }
 
 textarea {
@@ -66,14 +83,25 @@ textarea {
 .note-tag-list {
     padding: 5px;
     border: none;
+    background: none;
+}
+
+.note-colour {
+    position: absolute;
+    right: 20px;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    background: none;
+    border: 0;
+    cursor: pointer;
+    height: 30px;
+    padding: 0;
+    width: 30px;
 }
 
 .input-border {
     border: 1px solid black;
-}
-
-.red-background {
-    background-color: red !important;
 }
 
 .delete-note {
